--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "grunt": "~0.4.2",
     "grunt-contrib-jasmine": "~0.6.1",
     "grunt-contrib-uglify": "~0.4.0"
+  },
+  "scripts": {
+     "test": "grunt test"
   }
 }
